style.css
:root {
  --light-text: #EEEEEE;
  --dark-text: #000000;
  --light-background: #281e33;
  --dark-background: #18131f;
  --accent-red: #CF0A0A;
  --accent-orange: #DC5F00;

  --ms-highlight: #ffffff;
  --ms-norm: #bdbdbd;
  --ms-shadow: #7b7b7b;
}

body {
  display: flex;
  flex-direction: column;
  background-color: var(--dark-background);
  color: var(--light-text);
  box-sizing: border-box;
  font-family: 'Rubik', Arial, Helvetica, sans-serif;
}

button {
  border: none;
  background-color: var(--ms-norm);
  box-shadow: -3px -3px 2px var(--ms-shadow) inset, 3px 3px 2px var(--ms-highlight) inset;
  transition-duration: 25ms;
  transition-property: color, font-weight, box-shadow;
  transition-timing-function: ease-in;
}

button:active,
button:hover {
  color: var(--accent-orange);
  box-shadow: 3px 3px 2px var(--ms-shadow) inset, -3px -3px 2px var(--ms-highlight) inset;
  font-weight: bold;
}

/* Banner==================================================================================================== */
.banner {
  max-height: fit-content;
}
h1 {
  text-align: center;
  text-transform: uppercase;
  font-size: 3em;
  text-shadow: 2px  2px var(--accent-orange);
}

/* Help ===================================================================================================== */
.help-area {
  display: none;
}

#help-button {
  position: fixed;
  z-index: 1;
  bottom: 1.8em;
  right: 1.8em;
  height: 3em;
  width: 3em;
}

.show-help {
  color: var(--light-text);
  display: block;
  position: fixed;
  bottom: 5em;
  margin: 1em;
  overflow-y: auto;
  background-color: var(--light-background);
  padding: 1em;
  border-radius: 4px;
}

.help-item ul {
  list-style: none;
  display: flex;
  justify-content: space-around;
  padding: 0 0 0 0;
}

ul>li {
  width: 30%;
  text-align: center;
}

a:link,
a:visited,
a {
  color: inherit;
  transition-duration: 100ms;
  transition-property: color, font-weight;
  transition-timing-function: ease-in;
}

a:hover {
  color: var(--accent-orange);
  font-weight: bold;
}

/* controls =========================================================================================================== */
.controls {
  align-self: center;
  display: flex;
  flex-direction: column;
  gap: 1em;
  background: var(--ms-norm);
  color: var(--dark-text);
  padding: 1em;
  box-shadow: 3px 3px 2px var(--ms-shadow) inset, -3px -3px 2px var(--ms-highlight) inset;
}

.input-container {
  display: flex;
  gap: 1em;
}

.input-container * {
  min-height: 2.5em;
  line-height: 2.5em;
}

.input-container input {
  width: 4em;
}

.input-container button {
  width: 150%;
}

/* Game ================================================================================================================================ */
#game-area {
  /* align-self: center; */
  overflow-x: scroll;
  margin-top: 1em;
  margin-bottom: 4em;
  display: grid;
  gap: 4px;
}

.game-square {
  color: var(--dark-text);
  font-size: 1.7em;
  text-align: center;
  line-height: 40px;
  background-color: var(--ms-norm);
  box-shadow: -3px -3px 2px var(--ms-shadow) inset, 3px 3px 2px var(--ms-highlight) inset;
}

.mine {
  box-shadow: none;
  background-color: var(--accent-red);
}

.safe {
  box-shadow: none;
  background-color: lightgray;
}

.flagged {
  box-shadow: none;
  background-color: var(--accent-orange);
}

footer {
  width: 100%;
  text-align: center;
}

/* Scrolling Container*/

.scroll-container {
  display: none;
}

/* For medium screens ======================================================*/
@media only screen and (min-width: 768px) {
  html {
    height: 100%;
  }

  body {
    height: 100%;
    display: grid;
    grid-template-columns: 250px auto;
    grid-template-rows: min-content min-content auto min-content;
    grid-template-areas:
      "banner banner"
      "scroll-container controls"
      "scroll-container game"
      "foot foot";
      gap: 1em;
  }

  .banner {
    grid-area: banner;
  }

  #help-button {
    position: absolute;
    right: 1em;
    top: 1em;
  }

  .show-help {
    left: 60%;
  }

  .controls {
    grid-area: controls;
    width: 50%;
  }

  #game-area {
    grid-area: game;
    margin: 0 0 0 0;
  }

  .scroll-container {
    grid-area: scroll-container;
    display: block;
    overflow: hidden;
  }

  /* thanks to Jamie Juviler's tutorial at https://blog.hubspot.com/website/scrolling-text-css */
  /* animation not for evaluation as part of project, coppied and pasted for learning purposes, soon to be reworked */
  .scroll-text {
    height: 100%;
    text-align: center;

    /* animation properties */
    -moz-transform: translateY(100%);
    -webkit-transform: translateY(100%);
    transform: translateY(100%);

    -moz-animation: my-animation 10s linear infinite;
    -webkit-animation: my-animation 10s linear infinite;
    animation: my-animation 10s linear infinite;
  }

  /* for Firefox */
  @-moz-keyframes my-animation {
    from {
      -moz-transform: translateY(100%);
    }

    to {
      -moz-transform: translateY(-100%);
    }
  }

  /* for Chrome */
  @-webkit-keyframes my-animation {
    from {
      -webkit-transform: translateY(100%);
    }

    to {
      -webkit-transform: translateY(-100%);
    }
  }

  @keyframes my-animation {
    from {
      -moz-transform: translateY(100%);
      -webkit-transform: translateY(100%);
      transform: translateY(100%);
    }

    to {
      -moz-transform: translateY(-100%);
      -webkit-transform: translateY(-100%);
      transform: translateY(-100%);
    }
  }

  footer {
    grid-area: foot;
  }
}

/* for large screens ====================================================== */

@media only screen and (min-width: 992px) {
  html {
    display: flex;
    justify-content: center;
  }

  body {
    max-width: fit-content;
    display: grid;
    grid-template-rows: min-content auto min-content;
    grid-template-columns: 250px auto min-content;
    grid-template-areas:
      "banner banner banner"
      "scroll-container game controls"
      "foot foot foot";
  }

  .banner {
    position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
  }

  #help-button {
    justify-self: right;
    position: static;
    z-index: 0;
   }

  .controls {
    align-self: flex-start;
    justify-self: center;
  }

  .input-container:first-of-type {
    flex-wrap: wrap;
  }

  #game-area {
    grid-area: game;
  }

  footer {
    grid-area: foot;
  }
}

